[project]
name = "rl-das"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.5"
dependencies = [
    "absl-py==2.3.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cloudpickle==3.1.2",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.20.1",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "grpcio==1.76.0",
    "gym==0.26.2",
    "gym-notices==0.1.0",
    "gymnasium==1.2.3",
    "h5py==3.15.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "liac-arff==2.5.0",
    "llvmlite==0.46.0",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib==3.5.3",
    "minio==7.2.20",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numba==0.63.1",
    "numpy==1.23.2",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "openml==0.14.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pettingzoo==1.25.0",
    "pillow==12.1.0",
    "protobuf==6.33.2",
    "pyarrow==22.0.0",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "scikit-learn==1.4.1.post1",
    "scipy==1.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "tianshou==0.5.1",
    "torch==2.9.1",
    "tqdm==4.63.0",
    "triton==3.5.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "werkzeug==3.1.4",
    "xgboost==2.0.3",
    "xmltodict==1.0.2",
]
